--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
-title: Sen Li's Homepage
-page-top-title: Sen Li
-top-section-bg-text: Computer Science
-home-subtitle: Sen Li&ensp;|&ensp;李森
-copyright-text: '&copy; Sen Li 2023-2024. All Rights Reserved.'
+title: DongMu's Homepage
+page-top-title: DongMu
+top-section-bg-text: Software Engineering
+home-subtitle: Huangdong Liu&ensp;|&ensp;刘黄栋
+copyright-text: '&copy; Huangdong Liu 2023-2024. All Rights Reserved.'
