--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
-title: DongMu's Homepage
-page-top-title: DongMu
+title: wangtt's Homepage
+page-top-title: wangtt
 top-section-bg-text: Software Engineering
-home-subtitle: Huangdong Liu&ensp;|&ensp;刘黄栋
-copyright-text: '&copy; Huangdong Liu 2023-2024. All Rights Reserved.'
+home-subtitle: TongTong Wang&ensp;|&ensp;王彤彤
+copyright-text: '&copy; TongTong Wang 2023-2024. All Rights Reserved.'
